# Mangashiro-backend

./: .gitignore  Procfile  banco de dados.csv  bancodedadosanime.csv  bancodedadosanime_atualizada.csv  bancodedadosmanga.csv  dados.json  db.sqlite3  main.py  pyproject.toml  requirements.txt  run.sh
anime/: models.py  serializer.py  tests.py  urls.py  views.py
anime/migrations/: 0001_initial.py  0002_anime_slug.py  0002_auto_20231117_1500.py  0002_auto_20240712_0100.py  0003_alter_anime_status_type.py  0003_auto_20240713_0314.py  0004_alter_anime_image.py  0004_alter_anime_status_type.py  0005_alter_anime_source.py  0006_anime_background.py
character/: models.py  serializer.py  views.py
character/migrations/: 0001_initial.py  0002_auto_20240801_0206.py  0002_character_manga.py
core/: admin.py  asgi.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_auto_20231109_1505.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
manga/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
manga/migrations/: 0001_initial.py  0002_auto_20231120_1330.py  0002_auto_20240713_0314.py  (+5 more)
project/: settings.py  urls.py  wsgi.py
staff/: admin.py  models.py  serializer.py  test.py  urls.py  views.py
static/: staticfiles.json
staticfiles/: staticfiles.json
studio/: admin.py  models.py  serializer.py  urls.py  view.py  views.py
tag/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
user/: backends.py  models.py  serializer.py  tests.py  urls.py  views.py
(+21 files in other folders)
