[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Mach1r0 <segundacontafd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
